--- a/templates/lab4.html
+++ b/templates/lab4.html
@@ -17,7 +17,7 @@
 	<table style="width: 100%" cellpadding="20" cellspacing="20">
 		<tr>
 			<td rowspan="2" width="50">
-				<img src="images/idol1.png">
+				<img src="https://www.bnk48.com/data/Members/83/pro/l/20231105124720kopw27.png">
 			</td>
 			<td style="vertical-align: center; background-color: white;opacity: 0.8;">
 				<h1 style="color: #94538b;font-size: 70px;font-family: kanit; ">HOOP</h1>
